--- a/index.html
+++ b/index.html
@@ -37,23 +37,25 @@
                 <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p> <a href="#">Get started</a> <img src="img/Slides.img.png" alt=""> </div>
         </header>
         <main>
-            <div class="flex-container">
-                <div class="item1">
-                    <h3>Web & App Design</h3>
-                    <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
-                    <hr> </div>
-                <div class="item2">
-                    <h3>Development</h3>
-                    <p>Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-                    <hr> </div>
-                <div class="item3">
-                    <h3>Customization</h3>
-                    <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
-                    <hr> </div>
-                <div class="item4">
-                    <h3>Marketing</h3>
-                    <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
-                    <hr> </div>
+            <div class="icons">
+                <div class="flex-container">
+                    <div class="item1">
+                        <h3>Web & App Design</h3>
+                        <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
+                        <hr> </div>
+                    <div class="item2">
+                        <h3>Development</h3>
+                        <p>Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+                        <hr> </div>
+                    <div class="item3">
+                        <h3>Customization</h3>
+                        <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
+                        <hr> </div>
+                    <div class="item4">
+                        <h3>Marketing</h3>
+                        <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
+                        <hr> </div>
+                </div>
             </div>
             <section class="preview">
                 <h2>Waxom is Realization of your Ideas.</h2>
@@ -68,7 +70,66 @@
                     <p>Don't Forget to Rate the Template. Thanks so much!</p>
                 </div> <a href="#">Purchase now</a> </div>
             <section class="projects">
-                <h2>Our Latest Projects</h2> </section>
+                <h2>Our Latest Projects</h2>
+                <p>Investigationes demonstraverunt lectores legere me lius quod il legunt saeplus. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                <nav class="projmenu">
+                    <ul>
+                        <li><a href="#">All</a></li>
+                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">Mobile App</a></li>
+                        <li><a href="#">Illustration</a></li>
+                        <li><a href="#">Photography</a></li>
+                    </ul>
+                </nav>
+                <div class="gallery">
+                    <div class="proj1">
+                        <div class="afterhover"></div>
+                        <div class="speech">
+                            <h3>Clartitas Etiam Processus</h3>
+                            <p>Photography. Nature</p>
+                        </div>
+                    </div>
+                    <div class="proj2">
+                        <div class="afterhover"></div>
+                        <div class="speech">
+                            <h3>Quam Nutamus Farum</h3>
+                            <p>Graphic Design. Mock-Up</p>
+                        </div>
+                    </div>
+                    <div class="proj3">
+                        <div class="afterhover"></div>
+                        <div class="speech">
+                            <h3>Usus Legentis Videntur</h3>
+                            <p>Photography. Holiday</p>
+                        </div>
+                    </div>
+                    <div class="proj4">
+                        <div class="afterhover"></div>
+                        <div class="speech">
+                            <h3>Claritas Etiam Processus</h3>
+                            <p>Photography. Nature</p>
+                        </div>
+                    </div>
+                    <div class="proj5">
+                        <div class="afterhover"></div>
+                        <div class="speech">
+                            <h3>Quam Nutamus Farum</h3>
+                            <p>Graphic Design. Mock-Up</p>
+                        </div>
+                    </div>
+                    <div class="proj6">
+                        <div class="afterhover"></div>
+                        <div class="speech">
+                            <h3>Usus Legentis Videntur</h3>
+                            <p>Photography. Holiday</p>
+                        </div>
+                    </div> <a href="#">Load more</a> </div>
+            </section>
+            <div class="video">
+                <a href="#"><img src="img/videobutton.img.png" alt="video"></a>
+                <h2>Waxom Video Presentation</h2>
+                <p>Investigationes demonstraverunt lectores legere me lius quod li legunt saepius, qui sequitur mutationem consuetudium.</p>
+            </div>
         </main>
         <footer> </footer>
     </div>
