--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <header>
             <div class="upper">
                 <div class="logo">
-                    <a href="index.html"><img src="img/logo.img.png" alt="logo"></a>
-                    <p>Waxom</p>
-                </div>
+                    <a href="index.html"><img src="img/logo.img.png" alt="logo"></a> <span><a href="#">Waxom</a></span> </div>
                 <nav class="mainmenu">
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -26,10 +24,7 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
-                <div class="icons">
-                    <a href="#"><img src="img/icon-basket.img.png" alt="basket"></a>
-                    <a href="#"><img src="img/icon-search.img.png" alt="search"></a>
-                </div>
+                <div class="icons"> </div>
             </div>
             <div class="headtext">
                 <h2>Unique and Modern Design</h2>
@@ -42,19 +37,19 @@
                     <div class="item1">
                         <h3>Web & App Design</h3>
                         <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
-                        <hr> </div>
+                    </div>
                     <div class="item2">
                         <h3>Development</h3>
                         <p>Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-                        <hr> </div>
+                    </div>
                     <div class="item3">
                         <h3>Customization</h3>
                         <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
-                        <hr> </div>
+                    </div>
                     <div class="item4">
                         <h3>Marketing</h3>
                         <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
-                        <hr> </div>
+                    </div>
                 </div>
             </div>
             <section class="preview">
@@ -83,7 +78,7 @@
                 </nav>
                 <div class="gallery">
                     <div class="proj1">
-                        <div class="afterhover"></div>
+                        <div class="afterhover"> </div>
                         <div class="speech">
                             <h3>Clartitas Etiam Processus</h3>
                             <p>Photography. Nature</p>
@@ -129,7 +124,50 @@
                 <a href="#"><img src="img/videobutton.img.png" alt="video"></a>
                 <h2>Waxom Video Presentation</h2>
                 <p>Investigationes demonstraverunt lectores legere me lius quod li legunt saepius, qui sequitur mutationem consuetudium.</p>
+                <div class="timing">
+                    <p>03:26</p>
+                </div>
             </div>
+            <section class="mobile"> <img src="img/iPhone.img.jpg" alt="image">
+                <div class="mobiletext">
+                    <h2>Excellent for Mobile Devices</h2>
+                    <p>Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius claritas. Eodem modo typi, quinunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
+                    <ul>
+                        <li>Nam liber tempor cum soluta nobis eleifend option;</li>
+                        <li>Option congue nihil imperdiet doming id quod mazim placerat facer;</li>
+                        <li>Eodem modo typi, qui nunc videntur parum futurum;</li>
+                        <li>Investigationes demonstraverunt lectores</li>
+                    </ul>
+                </div>
+            </section>
+            <div class="achievements">
+                <div class="flex-container">
+                    <div class="clients">
+                        <h3>3587</h3>
+                        <p>satisfied clients</p>
+                    </div>
+                    <div class="coffee">
+                        <h3>207</h3>
+                        <p>cups of coffee</p>
+                    </div>
+                    <div class="publications">
+                        <h3>2500</h3>
+                        <p>blog posts</p>
+                    </div>
+                    <div class="likes">
+                        <h3>873</h3>
+                        <p>likes</p>
+                    </div>
+                    <div class="launch">
+                        <h3>900</h3>
+                        <p>we launched</p>
+                    </div>
+                </div>
+            </div>
+            <section class="posts">
+                <h2>Recent Posts</h2>
+                <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+            </section>
         </main>
         <footer> </footer>
     </div>
