--- a/index.html
+++ b/index.html
@@ -78,42 +78,42 @@
                 </nav>
                 <div class="gallery">
                     <div class="proj1">
-                        <div class="afterhover"> </div>
+                        <div class="afterhover"> <img src="img/project1.img.jpg" alt="img"> </div>
                         <div class="speech">
                             <h3>Clartitas Etiam Processus</h3>
                             <p>Photography. Nature</p>
                         </div>
                     </div>
                     <div class="proj2">
-                        <div class="afterhover"></div>
+                        <div class="afterhover"> <img src="img/project2.img.jpg" alt="img"> </div>
                         <div class="speech">
                             <h3>Quam Nutamus Farum</h3>
                             <p>Graphic Design. Mock-Up</p>
                         </div>
                     </div>
                     <div class="proj3">
-                        <div class="afterhover"></div>
+                        <div class="afterhover"> <img src="img/project3.img.jpg" alt="img"> </div>
                         <div class="speech">
                             <h3>Usus Legentis Videntur</h3>
                             <p>Photography. Holiday</p>
                         </div>
                     </div>
                     <div class="proj4">
-                        <div class="afterhover"></div>
+                        <div class="afterhover"> <img src="img/project4.img.jpg" alt="img"> </div>
                         <div class="speech">
                             <h3>Claritas Etiam Processus</h3>
                             <p>Photography. Nature</p>
                         </div>
                     </div>
                     <div class="proj5">
-                        <div class="afterhover"></div>
+                        <div class="afterhover"> <img src="img/project5.img.jpg" alt="img"> </div>
                         <div class="speech">
                             <h3>Quam Nutamus Farum</h3>
                             <p>Graphic Design. Mock-Up</p>
                         </div>
                     </div>
                     <div class="proj6">
-                        <div class="afterhover"></div>
+                        <div class="afterhover"> <img src="img/project6.img.jpg" alt="img"> </div>
                         <div class="speech">
                             <h3>Usus Legentis Videntur</h3>
                             <p>Photography. Holiday</p>
@@ -167,7 +167,50 @@
             <section class="posts">
                 <h2>Recent Posts</h2>
                 <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                <div class="postsexamples">
+                    <div class="flex-container">
+                        <div class="example1">
+                           <div class="exheader">
+                            <img src="img/ex1.img.jpg" alt="img">
+                            </div>
+                            <div class="speech2">
+                                <h3>Lorem ipsum dolor sit amet</h3>
+                                <p>Caritas est etiam processus dynamicus, qui sequltur mutationem consuetudium</p>
+                                <a href="#">Read More</a></div>
+                        </div>
+                        <div class="example2">
+                           <div class="exheader">
+                            <img src="img/ex2.img.jpg" alt="img">
+                            </div>
+                            <div class="speech2">
+                                <h3>Lorem ipsum dolor sit amet</h3>
+                                <p>Caritas est etiam processus dynamicus, qui sequltur mutationem consuetudium</p>
+                                 <a href="#">Read More</a></div>
+                        </div>
+                        <div class="example3">
+                           <div class="exheader">
+                            <img src="img/ex3.img.jpg" alt="img">
+                            </div>
+                            <div class="speech2">
+                                <h3>Lorem ipsum dolor sit amet</h3>
+                                <p>Caritas est etiam processus dynamicus, qui sequltur mutationem consuetudium</p>
+                                 <a href="#">Read More</a></div>
+                        </div>
+                    </div>
+                    <div class="arrows">
+                    <a href="#"><img src="img/arrowleft.img.png" alt=""></a>
+                    <a href="#"><img src="img/arrowright.img.png" alt=""></a>
+                    </div>
+                </div>
             </section>
+            <div class="partners">
+               <div class="flex-container">
+                    <a href="#"><img src="img/partner1.img.png" alt="img"></a>
+                    <a href="#"><img src="img/partner2.img.png" alt="img"></a>
+                    <a href="#"><img src="img/partner3.img.png" alt="img"></a>
+                    <a href="#"><img src="img/partner4.img.png" alt="#"></a>
+               </div>
+                </div>
         </main>
         <footer> </footer>
     </div>
