--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                         </div>
                     </div>
                     <div class="arrows">
-                    <a href="#"><img src="img/arrowleft.img.png" alt=""></a>
-                    <a href="#"><img src="img/arrowright.img.png" alt=""></a>
+                    <a href="#"><img src="img/arrowleft.img.png" alt="img"></a>
+                    <a href="#"><img src="img/arrowright.img.png" alt="img"></a>
                     </div>
                 </div>
             </section>
@@ -208,7 +208,7 @@
                     <a href="#"><img src="img/partner1.img.png" alt="img"></a>
                     <a href="#"><img src="img/partner2.img.png" alt="img"></a>
                     <a href="#"><img src="img/partner3.img.png" alt="img"></a>
-                    <a href="#"><img src="img/partner4.img.png" alt="#"></a>
+                    <a href="#"><img src="img/partner4.img.png" alt="img"></a>
                </div>
                 </div>
         </main>
