--- a/index.html
+++ b/index.html
@@ -170,49 +170,99 @@
                 <div class="postsexamples">
                     <div class="flex-container">
                         <div class="example1">
-                           <div class="exheader">
-                            <img src="img/ex1.img.jpg" alt="img">
-                            </div>
+                            <div class="exheader"> <img src="img/ex1.img.jpg" alt="img"> </div>
                             <div class="speech2">
                                 <h3>Lorem ipsum dolor sit amet</h3>
-                                <p>Caritas est etiam processus dynamicus, qui sequltur mutationem consuetudium</p>
-                                <a href="#">Read More</a></div>
+                                <p>Caritas est etiam processus dynamicus, qui sequltur mutationem consuetudium</p> <a href="#">Read More</a></div>
                         </div>
                         <div class="example2">
-                           <div class="exheader">
-                            <img src="img/ex2.img.jpg" alt="img">
-                            </div>
+                            <div class="exheader"> <img src="img/ex2.img.jpg" alt="img"> </div>
                             <div class="speech2">
                                 <h3>Lorem ipsum dolor sit amet</h3>
-                                <p>Caritas est etiam processus dynamicus, qui sequltur mutationem consuetudium</p>
-                                 <a href="#">Read More</a></div>
+                                <p>Caritas est etiam processus dynamicus, qui sequltur mutationem consuetudium</p> <a href="#">Read More</a></div>
                         </div>
                         <div class="example3">
-                           <div class="exheader">
-                            <img src="img/ex3.img.jpg" alt="img">
-                            </div>
+                            <div class="exheader"> <img src="img/ex3.img.jpg" alt="img"> </div>
                             <div class="speech2">
                                 <h3>Lorem ipsum dolor sit amet</h3>
-                                <p>Caritas est etiam processus dynamicus, qui sequltur mutationem consuetudium</p>
-                                 <a href="#">Read More</a></div>
+                                <p>Caritas est etiam processus dynamicus, qui sequltur mutationem consuetudium</p> <a href="#">Read More</a></div>
                         </div>
                     </div>
                     <div class="arrows">
-                    <a href="#"><img src="img/arrowleft.img.png" alt="img"></a>
-                    <a href="#"><img src="img/arrowright.img.png" alt="img"></a>
+                        <a href="#"><img src="img/arrowleft.img.png" alt="img"></a>
+                        <a href="#"><img src="img/arrowright.img.png" alt="img"></a>
                     </div>
                 </div>
             </section>
             <div class="partners">
-               <div class="flex-container">
+                <div class="flex-container">
                     <a href="#"><img src="img/partner1.img.png" alt="img"></a>
                     <a href="#"><img src="img/partner2.img.png" alt="img"></a>
                     <a href="#"><img src="img/partner3.img.png" alt="img"></a>
                     <a href="#"><img src="img/partner4.img.png" alt="img"></a>
-               </div>
                 </div>
+            </div>
         </main>
-        <footer> </footer>
+        <footer>
+            <div class="footerup">
+                <div class="compinfo">
+                    <div class="logo2">
+                        <a href="index.html"><img src="img/logo.img.png" alt="logo"></a> <span><a href="#">Waxom</a></span> </div>
+                    <p>Lorem Ipsum dolor sit amet consec tetuer adipiscing elit sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci suscipit lobortis claritatem</p>
+                    <div class="more"><a href="#">Read More</a></div>
+                </div>
+                <div class="recentposts">
+                    <h3>Recent Posts</h3>
+                    <div class="footerposts">
+                        <time>September 08 2015</time> <a href="#">Lorem Ipsum dolor sit amet consec tetuer adipiscing elit</a>
+                        <hr> </div>
+                    <div class="footerposts">
+                        <time>September 08 2015</time> <a href="#">Diam nonummy nibh euismod tincidunt ut laoreet dolore magna</a>
+                        <hr> </div>
+                    <div class="footerposts">
+                        <time>September 08 2015</time> <a href="#">Claritas est etiam processus dynamicus, qui sequitir mutationem per seacula quarta decima</a> </div>
+                </div>
+                <div class="twi">
+                    <h3>Our Twitter</h3>
+                    <div class="twit">
+                        <p>@waxom Cum soluta nobis eleifend option congue nihil imperdiet doming</p>
+                        <time>3 mins ago</time>
+                        <hr> </div>
+                    <div class="twit">
+                        <p>Mirum est #envato notare quam littera gothica, quam nunc putamus parum anteposuerit litterarum</p>
+                        <time>5 hours ago</time>
+                        <hr> </div>
+                    <div class="twit">
+                        <p>Soluta nobis option bit.ly/1Hniso7</p>
+                        <time>20 days ago</time>
+                    </div>
+                </div>
+                <div class="widget">
+                    <h3>Dribbble Widget</h3>
+                    <a href="#"><img src="img/widget1.img.jpg" alt="img"></a>
+                    <a href="#"><img src="img/widget2.img.jpg" alt="img"></a>
+                    <a href="#"><img src="img/widget3.img.jpg" alt="img"></a>
+                    <a href="#"><img src="img/widget4.img.jpg" alt="img"></a>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="bottommenu">
+                    <p>Copyright© 2015</p>
+                    <ul>
+                        <li><a href="#">Waxom</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </div>
+                <div class="bottominfo">
+                    <ul>
+                        <li><a href="#">Designed by ThemeFire</a></li>
+                        <li><a href="#">Only on Envato Market</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
