--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontello.css" type="text/css"> </head>
@@ -24,7 +25,7 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
-                <div class="icons"> </div>
+                <div class="icons1"> </div>
             </div>
             <div class="headtext">
                 <h2>Unique and Modern Design</h2>
