--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <div class="upper">
                 <div class="logo">
-                    <a href="index.html"><img src="img/logo.img.png" alt="logo"></a> <span><a href="#">Waxom</a></span> </div>
+                    <a href="index.html"><img src="img/logo.img.png" alt="logo"> <span>Waxom</span></a> </div>
                 <nav class="mainmenu">
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -30,7 +30,7 @@
             <div class="headtext">
                 <h2>Unique and Modern Design</h2>
                 <h1>Portfolio PSD Template</h1>
-                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p> <a href="#">Get started</a> <img src="img/Slides.img.png" alt=""> </div>
+                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p> <a href="#">Get started</a> <img src="img/Slides.img.png" alt="slides"> </div>
         </header>
         <main>
             <div class="icons">
