--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontello.css" type="text/css"> </head>
@@ -13,7 +13,8 @@
         <header>
             <div class="upper">
                 <div class="logo">
-                    <a href="index.html"><img src="img/logo.img.png" alt="logo"> <span>Waxom</span></a> </div>
+                    <a href="index.html"><img src="img/logo.img.png" alt="logo"> <span>Waxom</span></a>
+                </div>
                 <nav class="mainmenu">
                     <ul>
                         <li><a href="#">Home</a></li>
